--- a/backend/package.json
+++ b/backend/package.json
@@ -5,5 +5,16 @@
     "express": "^4.18.2",
     "mongoose": "^7.6.1",
     "nodemon": "^3.0.1"
-  }
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "start": "npx nodemon index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
