Pages and componenets added

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,12 @@
 SERVER_PORT = 5000
 DATABASE_PASS = "placement_portal"
+JWT_SECRET_KEY_STUDENT=sh2b23h24bfuh352
+JWT_SECRET_KEY_COLLEGE=shhfCOLLEGEjso
+JWT_SECRET_KEY_COMPANY=shhfCOMPANYjso
+
+FRONTEND_URL=http://localhost:3000
+
+
+CLOUDINARY_CLOUDNAME=dxh6v9voc
+CLOUDINARY_APIKEY=482957476972261
+CLOUDINARY_APISECRET=YkgIZcd8xRDJuzqmiaodYQUxrzU
